--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
         "dev": "vite",
         "build": "vite build"
     },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
     "devDependencies": {
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.0",
+        "@vitejs/plugin-react": "^4.2.0",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
+        "typescript": "^5.3.0",
         "vite": "^5.0"
     }
 }
