feat: Laravel + React SPA с TypeScript для импорта данных
- Настроен Vite с React/TypeScript
- Созданы компоненты интерфейса импорта
- Добавлен типизированный API сервис
- Настроена маршрутизация для SPA
- Исправлены все ошибки линтера (20/20)
- vite.config.js → vite.config.ts для консистентности
- Добавлена документация

Готово к тестированию: npm run dev

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["resources/js"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["resources/js"]
 }
 
