feat(DT-05): Настройка линтеров и форматтеров
Добавлены линтеры и форматтеры для единого стиля кода:

- PHP Pint: pint.json, команды composer lint/format
- ESLint + Prettier: конфиги и npm скрипты для TS/React
- EditorConfig + GitAttributes для всех редакторов

Dry-run выявил:
- PHP: 55 файлов с проблемами стиля
- TS: 25 warnings, 3 errors
- Prettier: 9 файлов требуют форматирования

Массовые исправления - отдельная задача.
Документация: DT-05-REPORT.md

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,10 @@
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
-        ]
+        ],
+        "lint": "pint --test",
+        "format": "pint",
+        "test": "phpunit"
     },
     "extra": {
         "laravel": {
