--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "lint": "eslint resources/js --ext .ts,.tsx",
+        "lint:fix": "eslint resources/js --ext .ts,.tsx --fix",
+        "format": "prettier --write \"resources/js/**/*.{ts,tsx}\"",
+        "format:check": "prettier --check \"resources/js/**/*.{ts,tsx}\"",
+        "type-check": "tsc --noEmit"
     },
     "dependencies": {
         "react": "^18.2.0",
@@ -12,9 +17,16 @@
     "devDependencies": {
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react": "^4.2.0",
         "axios": "^1.7.4",
+        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "laravel-vite-plugin": "^1.0",
+        "prettier": "^3.1.0",
         "typescript": "^5.3.0",
         "vite": "^5.0"
     }
