--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react": "^4.2.0",
+        "@vitejs/plugin-react-swc": "^4.1.0",
         "axios": "^1.7.4",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
@@ -31,4 +32,3 @@
         "vite": "^5.0"
     }
 }
-
